tests/samples/negative/types/enum_adt_multi_payload_arity.ax
module enum_adt_multi_payload_arity;

enum Token {
    span(usize, usize),
    eof,
}

fn main() -> i32 {
    let token = Token.span(cast<usize>(1));
    return 0;
}
